Link and titile updates

--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -14,7 +14,7 @@
               <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
@@ -48,10 +48,10 @@
               <a href="https://my.uq.edu.au" class="uq-footer__navigation-link">my.UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
+              <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -111,7 +111,7 @@
               <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
@@ -148,7 +148,7 @@
               <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -203,7 +203,7 @@
         <ul class="uq-footer__footer-list uq-footer__contact-social"> 
           <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Follow us on Facebook" data-gtm-label="Follow us on Facebook"></a></li> 
           <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/school/university-of-queensland" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="Follow us on linkedin" data-gtm-label="Follow us on Linkedin"></a></li> 
-          <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Follow us on X" data-gtm-label="Follow us on X"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://x.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Follow us on X" data-gtm-label="Follow us on X"></a></li>
           <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Follow us on Youtube" data-gtm-label="Follow us on Youtube"></a></li>
           <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Follow us on Instagram" data-gtm-label="Follow us on Instagram"></a></li>
         </ul>
