--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -72,12 +72,14 @@
                     <div class="megamenu__heading">Our research</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://research.uq.edu.au/news" data-gtm-label="Research > Research news">Research news</a></li>
-                        <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
-                        <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
-                        <li><a href="https://www.uq.edu.au/research/about/research-infrastructure" data-gtm-label="Research > Research facilities and infrastructure">Research facilities and infrastructure</a></li>
-                        <li><a href="https://researchers.uq.edu.au" data-gtm-label="Research > Find a researcher">Find a researcher</a></li>
-                        <li><a href="https://research.uq.edu.au/contact" data-gtm-label="Research > Contact">Contact</a></li>
+                        <li><a href="https://research.uq.edu.au/strategy" data-gtm-label="Research > Strategy and impact">Strategy and impact</a></li>
+                        <li><a href="https://research.uq.edu.au/capabilities" data-gtm-label="Research > Research capabilities">Research capabilities</a></li>
+                        <li><a href="https://research.uq.edu.au/facilities" data-gtm-label="Research > Facilities and infrastructure">Facilities and infrastructure</a></li>
+                        <li><a href="https://research.uq.edu.au/ethics-integrity" data-gtm-label="Research > Ethics and integrity">Ethics and integrity</a></li>
+                        <li><a href="https://research.uq.edu.au/supporting-researchers" data-gtm-label="Research > Supporting our researchers">Supporting our researchers</a></li>
+                        <li><a href="https://uq.edu.au/research/news" data-gtm-label="Research > News">News</a></li>
+              <li><a href="https://about.uq.edu.au/experts" data-gtm-label="Research > Find an expert">Find an expert</a></li>
+              <li><a href="https://research.uq.edu.au/contact" data-gtm-label="Research > Contact">Contact</a></li>
                       </ul>
                     </div>
                   </div>
@@ -87,7 +89,7 @@
                       <ul>
                         <li><a href="https://research.uq.edu.au/graduate-research" data-gtm-label="Research > About Graduate School">About Graduate School</a></li>
                         <li><a href="https://study.uq.edu.au/study-options/phd-mphil-professional-doctorate" data-gtm-label="Research > PhD, MPhil and professional doctorate">PhD, MPhil and professional doctorate</a></li>
-                        <li><a href="https://researchers.uq.edu.au" data-gtm-label="Research > Find a supervisor">Find a supervisor</a></li>
+                        <li><a href="https://about.uq.edu.au/experts" data-gtm-label="Research > Find a supervisor">Find a supervisor</a></li>
                         <li><a href="https://study.uq.edu.au/admissions/phd-mphil-professional-doctorate" data-gtm-label="Research > How to apply">How to apply</a></li>
                         <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research" data-gtm-label="Research > Current students">Current students</a></li>
                       </ul>
@@ -97,7 +99,7 @@
                     <div class="megamenu__heading">Partner with us</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Research > About research partnerships">About research partnerships</a></li>
+                        <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Research > About partnerships">About partnerships</a></li>
                         <li><a href="https://research.uq.edu.au/partner/industry" data-gtm-label="Research > Industry portfolios">Industry portfolios</a></li>
                         <li><a href="https://research.uq.edu.au/partner/ways-to-partner" data-gtm-label="Research > Ways to partner">Ways to partner</a></li>                        
                       </ul>
@@ -132,7 +134,7 @@
                         <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Volunteering​">Volunteering​</a></li>
                         <li><a href="https://study.uq.edu.au/information-resources/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
                         <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement​">Indigenous engagement​</a></li>
-                        <li><a href="https://www.uq.edu.au/about/sponsorships" data-gtm-label="Partners and community > Community sponsorships​">Community sponsorships​</a></li>
+                        <li><a href="https://partners-community.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorships and brand partnerships​">Sponsorships and brand partnerships</a></li>
                         <li><a href="https://about.uq.edu.au/initiatives/queensland-commitment" data-gtm-label="Partners and community > The Queensland Commitment">The Queensland Commitment</a></li>
                      </ul>
                     </div>
@@ -166,7 +168,7 @@
                         <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
                         <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
                         <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
-                        <li><a href="https://about.uq.edu.au/organisation" data-gtm-label="About > Organisational structure and governance">Organisational structure and governance</a></li>
+                        <li><a href="https://about.uq.edu.au/governance-and-organisational-structure" data-gtm-label="About > Governance and organisational structure">Governance and organisational structure</a></li>
                         <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
                         <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
                       </ul>
@@ -262,11 +264,13 @@
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our research</a>
             <ul>
-              <li><a href="https://research.uq.edu.au/news" data-gtm-label="Research > Research news">Research news</a></li>
-              <li><a href="https://research.uq.edu.au/research-support" data-gtm-label="Research > Research funding, ethics and support">Research funding, ethics and support</a></li>
-              <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
-              <li><a href="https://www.uq.edu.au/research/about/research-infrastructure" data-gtm-label="Research > Research facilities and infrastructure">Research facilities and infrastructure</a></li>
-              <li><a href="https://researchers.uq.edu.au" data-gtm-label="Research > Find a researcher">Find a researcher</a></li>
+              <li><a href="https://research.uq.edu.au/strategy" data-gtm-label="Research > Strategy and impact">Strategy and impact</a></li>
+              <li><a href="https://research.uq.edu.au/capabilities" data-gtm-label="Research > Research capabilities">Research capabilities</a></li>
+              <li><a href="https://research.uq.edu.au/facilities" data-gtm-label="Research > Facilities and infrastructure">Facilities and infrastructure</a></li>
+              <li><a href="https://research.uq.edu.au/ethics-integrity" data-gtm-label="Research > Ethics and integrity">Ethics and integrity</a></li>
+              <li><a href="https://research.uq.edu.au/supporting-researchers" data-gtm-label="Research > Supporting our researchers">Supporting our researchers</a></li>
+              <li><a href="https://uq.edu.au/research/news" data-gtm-label="Research > News">News</a></li>
+              <li><a href="https://about.uq.edu.au/experts" data-gtm-label="Research > Find an expert">Find an expert</a></li>
               <li><a href="https://research.uq.edu.au/contact" data-gtm-label="Research > Contact">Contact</a></li>
             </ul>
           </li>
@@ -275,7 +279,7 @@
             <ul>
               <li><a href="https://research.uq.edu.au/graduate-research" data-gtm-label="Research > About Graduate School">About Graduate School</a></li>
               <li><a href="https://study.uq.edu.au/study-options/phd-mphil-professional-doctorate" data-gtm-label="Research > PhD, MPhil and professional doctorate">PhD, MPhil and professional doctorate</a></li>
-              <li><a href="https://researchers.uq.edu.au" data-gtm-label="Research > Find a supervisor">Find a supervisor</a></li>
+              <li><a href="https://about.uq.edu.au/experts" data-gtm-label="Research > Find a supervisor">Find a supervisor</a></li>
               <li><a href="https://study.uq.edu.au/admissions/phd-mphil-professional-doctorate" data-gtm-label="Research > How to apply">How to apply</a></li>
               <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research" data-gtm-label="Research > Current students">Current students</a></li>
             </ul>
@@ -283,7 +287,7 @@
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
             <ul>
-              <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Research > About research partnerships">About research partnerships</a></li>
+              <li><a href="https://research.uq.edu.au/partner" data-gtm-label="Research > About partnerships">About partnerships</a></li>
               <li><a href="https://research.uq.edu.au/partner/industry" data-gtm-label="Research > Industry portfolios">Industry portfolios</a></li>
               <li><a href="https://research.uq.edu.au/partner/ways-to-partner" data-gtm-label="Research > Ways to partner">Ways to partner</a></li>              
             </ul>
@@ -313,7 +317,7 @@
               <li><a href="https://alumni.uq.edu.au/volunteer" data-gtm-label="Partners and community > Volunteering​">Volunteering​</a></li>
               <li><a href="https://study.uq.edu.au/information-resources/teachers-guidance-counsellors" data-gtm-label="Partners and community > High school engagement">High school engagement</a></li>
               <li><a href="https://indigenous-engagement.uq.edu.au" data-gtm-label="Partners and community > Indigenous engagement​">Indigenous engagement​</a></li>
-              <li><a href="https://www.uq.edu.au/about/sponsorships" data-gtm-label="Partners and community > Community sponsorships​">Community sponsorships​</a></li>
+              <li><a href="https://partners-community.uq.edu.au/sponsorships" data-gtm-label="Partners and community > Sponsorships and brand partnerships​">Sponsorships and brand partnerships</a></li>
               <li><a href="https://about.uq.edu.au/initiatives/queensland-commitment" data-gtm-label="Partners and community > The Queensland Commitment">The Queensland Commitment</a></li>
             </ul>
           </li>
@@ -342,7 +346,7 @@
               <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
               <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
               <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
-              <li><a href="https://about.uq.edu.au/organisation" data-gtm-label="About > Organisational structure and governance">Organisational structure and governance</a></li>
+              <li><a href="https://about.uq.edu.au/governance-and-organisational-structure" data-gtm-label="About > Governance and organisational structure">Governance and organisational structure</a></li>
               <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
               <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres" data-gtm-label="About > Faculties, schools, institutes and centres">Faculties, schools, institutes and centres</a></li>
             </ul>
@@ -384,7 +388,7 @@
   </nav>
   <div class="uq-header__search" data-gtm-category="Search">
     <div class="uq-header__search-container">
-      <form action="https://www.uq.edu.au/search" method="get" data-gtm-action="Text search" data-gtm-form-action>
+      <form action="https://search.uq.edu.au" method="get" data-gtm-action="Text search" data-gtm-form-action>
         <fieldset>
           <div class="uq-header__search-query">
             <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
