updated link Research capabilities

--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -73,7 +73,7 @@
                     <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://research.uq.edu.au/strategy" data-gtm-label="Research > Strategy and impact">Strategy and impact</a></li>
-                        <li><a href="https://research.uq.edu.au/capabilities" data-gtm-label="Research > Research capabilities">Research capabilities</a></li>
+                        <li><a href="https://research.uq.edu.au/research-capabilities" data-gtm-label="Research > Research capabilities">Research capabilities</a></li>
                         <li><a href="https://research.uq.edu.au/facilities" data-gtm-label="Research > Facilities and infrastructure">Facilities and infrastructure</a></li>
                         <li><a href="https://research.uq.edu.au/ethics-integrity" data-gtm-label="Research > Ethics and integrity">Ethics and integrity</a></li>
                         <li><a href="https://research.uq.edu.au/supporting-researchers" data-gtm-label="Research > Supporting our researchers">Supporting our researchers</a></li>
@@ -265,7 +265,7 @@
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our research</a>
             <ul>
               <li><a href="https://research.uq.edu.au/strategy" data-gtm-label="Research > Strategy and impact">Strategy and impact</a></li>
-              <li><a href="https://research.uq.edu.au/capabilities" data-gtm-label="Research > Research capabilities">Research capabilities</a></li>
+              <li><a href="https://research.uq.edu.au/research-capabilities" data-gtm-label="Research > Research capabilities">Research capabilities</a></li>
               <li><a href="https://research.uq.edu.au/facilities" data-gtm-label="Research > Facilities and infrastructure">Facilities and infrastructure</a></li>
               <li><a href="https://research.uq.edu.au/ethics-integrity" data-gtm-label="Research > Ethics and integrity">Ethics and integrity</a></li>
               <li><a href="https://research.uq.edu.au/supporting-researchers" data-gtm-label="Research > Supporting our researchers">Supporting our researchers</a></li>
