--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -2,7 +2,7 @@
 @use "@uqds/body/src/scss/_component" as body;
 @use "@uqds/grid/src/scss/_component" as grid;
 
-@import "@uqds/core/src/scss/main.scss";
+@use "@uqds/core/src/scss/main.scss" as *;
 
 body {
   // Prevent the @uqds/body from imposing a background colour.
