--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="uq-footer" data-gtm-category="Footer">
   <div  class="uq-footer__reconciliation">
     <div class="uq-footer__acknowledgement">
-      <img class="uq-footer__acknowledgement-flag" alt="Australian Aboriginal Flag" src="https://static.uq.net.au/v15/images/rap/aboriginal.svg"/> <img class="uq-footer__acknowledgement-flag" alt="Torres Strait Islander Flag" src="https://static.uq.net.au/v15/images/rap/torres-strait-islanders.svg"/> <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
+     <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
     </div>
   </div>
   <div class="uq-footer__container">
