Created Acknowledgement Statement component

--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="uq-footer" data-gtm-category="Footer">
-  <div  class="uq-footer__reconciliation">
-    <div class="uq-footer__acknowledgement">
-     <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
+  <div  class="uq-acknowledgement-statement">
+    <div class="uq-acknowledgement-statement__content">
+    UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-acknowledgement-statement__link">Reconciliation at UQ</a>
     </div>
   </div>
   <div class="uq-footer__container">
