--- a/packages/acknowledgement-statement/src/scss/_component.scss
+++ b/packages/acknowledgement-statement/src/scss/_component.scss
@@ -4,10 +4,12 @@
 
 .uq-acknowledgement-statement {
   background: core.$black;
-  background-image: linear-gradient(90deg,
+  background-image: linear-gradient(
+      90deg,
       #48206c 28.12%,
       rgba(72, 32, 108, 0.65) 70.31%,
-      rgba(72, 32, 108, 0) 100%),
+      rgba(72, 32, 108, 0) 100%
+    ),
     url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
 
   &__content {
