--- a/packages/storybook-html/stories/components/core/written-style.html
+++ b/packages/storybook-html/stories/components/core/written-style.html
@@ -23,7 +23,7 @@
     <div class="uq-card-grid uq-card-grid--target-3x">
         <div class="uq-card uq-card--text">
           <div class="uq-card__content">
-            <h3 class="uq-card__title"><a href="https://marketing-communication.uq.edu.au/files/8026/uq-written-style-quick-reference">Quick reference PDF</a></h3>
+            <h3 class="uq-card__title"><a href="https://marketing-communication.uq.edu.au/files/11009/written-style-quick-reference.pdf">Quick reference PDF</a></h3>
             <div class="uq-card__description">For a general overview of UQ's written style, download:</div>          
           </div>
         </div>
@@ -44,7 +44,14 @@
             <h3 class="uq-card__title"><a href="https://guides.library.uq.edu.au/referencing">Academic and research writing</a></h3>
             <div class="uq-card__description">For academic and research writing, access specific styles at:</div>          
           </div>
-        </div>     
+        </div>
+        <div class="uq-card uq-card--text">
+          <div class="uq-card__content">
+            <h3 class="uq-card__title"><a href="https://staff.uq.edu.au/files/242/using-inclusive-language-guide.pdf">Using inclusive language</a></h3>
+            <div class="uq-card__description">Inclusive language is about communicating in a way that is accessible and respectful and values,
+              includes and empowers all members of your audience. </div>          
+          </div>
+        </div>      
         <div class="uq-card uq-card--text">
           <div class="uq-card__content">
             <h3 class="uq-card__title"><a href="https://marketing-communication.uq.edu.au/uq-brand-assets/access-uq-dam">Templates and images</a></h3>
