--- a/packages/acknowledgement-statement/src/scss/_component.scss
+++ b/packages/acknowledgement-statement/src/scss/_component.scss
@@ -5,24 +5,41 @@
 .uq-acknowledgement-statement {
   background: core.$black;
   background-image: linear-gradient(
-      90deg,
-      #48206c 28.12%,
-      rgba(72, 32, 108, 0.65) 70.31%,
-      rgba(72, 32, 108, 0) 100%
-    ),
-    url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
+    0deg,
+    #48206c 45.31%,
+    rgba(72, 32, 108, 0.55) 85.94%,
+    rgba(72, 32, 108, 0) 100%
+  ),
+  url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
+
+  @media (min-width: 40rem) {  /* 640px */
+    background-image: linear-gradient(
+        90deg,
+        #48206c 60%,
+        rgba(72, 32, 108, 0.65) 70%,
+        rgba(72, 32, 108, 0) 80%
+      ),
+      url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
+  }
 
   &__content {
     max-width: 73.25rem;
-    padding: core.$space-xl core.$space-l;
-    color: #d4c8de;
+    padding: core.$space-compressed-m core.$space-l;
+    color: core.$white;
     font-weight: 400;
     font-size: core.$font-size-m;
     line-height: 1.5;
     margin: auto;
 
     @media #{core.$screen-xl-up} {
-      padding: core.$space-xl core.$space-m;
+      padding: core.$space-compressed-m core.$space-m;
+    }
+  }
+
+  &__text {
+    @media (min-width: 40rem) {  /* 640px */
+      max-width: 47.313rem;
+      width: 74.1%;
     }
   }
 
@@ -36,5 +53,25 @@
       text-decoration: underline;
       color: #d4c8de;
     }
+  }
+
+  &--large {
+  }
+  &--large &__content {
+    padding: core.$space-xxl core.$space-l core.$space-l;
+    @media (min-width: 40rem) {  /* 640px */
+      font-size: core.$font-size-xl;
+      padding: core.$space-xxl core.$space-l;
+    }
+    @media #{core.$screen-xl-up} {
+      padding: core.$space-xxl core.$space-m;
+    }
+  }
+  &__text {
+    @media (min-width: 40rem) {  /* 640px */
+      max-width: 47.313rem;
+      width: 74.1%;
+    }
+    
   }
 }
