--- a/packages/acknowledgement-statement/src/scss/_component.scss
+++ b/packages/acknowledgement-statement/src/scss/_component.scss
@@ -5,14 +5,15 @@
 .uq-acknowledgement-statement {
   background: core.$black;
   background-image: linear-gradient(
-    0deg,
-    #48206c 45.31%,
-    rgba(72, 32, 108, 0.55) 85.94%,
-    rgba(72, 32, 108, 0) 100%
-  ),
-  url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
+      0deg,
+      #48206c 45.31%,
+      rgba(72, 32, 108, 0.55) 85.94%,
+      rgba(72, 32, 108, 0) 100%
+    ),
+    url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
 
-  @media (min-width: 40rem) {  /* 640px */
+  @media (min-width: 40rem) {
+    /* 640px */
     background-image: linear-gradient(
         90deg,
         #48206c 60%,
@@ -37,7 +38,8 @@
   }
 
   &__text {
-    @media (min-width: 40rem) {  /* 640px */
+    @media (min-width: 40rem) {
+      /* 640px */
       max-width: 47.313rem;
       width: 74.1%;
     }
@@ -57,7 +59,8 @@
 
   &--large &__content {
     padding: core.$space-xxl core.$space-l core.$space-l;
-    @media (min-width: 40rem) {  /* 640px */
+    @media (min-width: 40rem) {
+      /* 640px */
       font-size: core.$font-size-xl;
       padding: core.$space-xxl core.$space-l;
     }
@@ -66,10 +69,10 @@
     }
   }
   &__text {
-    @media (min-width: 40rem) {  /* 640px */
+    @media (min-width: 40rem) {
+      /* 640px */
       max-width: 47.313rem;
       width: 74.1%;
     }
-    
   }
 }
