--- a/packages/acknowledgement-statement/src/scss/_component.scss
+++ b/packages/acknowledgement-statement/src/scss/_component.scss
@@ -6,9 +6,9 @@
   background: core.$black;
   background-image: linear-gradient(
       0deg,
-      #48206c 45.31%,
-      rgba(72, 32, 108, 0.55) 85.94%,
-      rgba(72, 32, 108, 0) 100%
+      #40205D 45.31%,
+      rgba(64, 32, 93, 0.55) 85.94%,
+      rgba(64, 32, 93, 0) 100%
     ),
     url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
 
@@ -16,9 +16,9 @@
     /* 640px */
     background-image: linear-gradient(
         90deg,
-        #48206c 60%,
-        rgba(72, 32, 108, 0.65) 70%,
-        rgba(72, 32, 108, 0) 80%
+        #40205D 60%,
+        rgba(64, 32, 93, 0.65) 70%,
+        rgba(64, 32, 93, 0) 80%
       ),
       url("https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png");
   }
