--- a/packages/acknowledgement-statement/src/scss/_component.scss
+++ b/packages/acknowledgement-statement/src/scss/_component.scss
@@ -6,7 +6,7 @@
   background: core.$black;
   background-image: linear-gradient(
       0deg,
-      #40205D 45.31%,
+      #40205d 45.31%,
       rgba(64, 32, 93, 0.55) 85.94%,
       rgba(64, 32, 93, 0) 100%
     ),
@@ -16,7 +16,7 @@
     /* 640px */
     background-image: linear-gradient(
         90deg,
-        #40205D 60%,
+        #40205d 60%,
         rgba(64, 32, 93, 0.65) 70%,
         rgba(64, 32, 93, 0) 80%
       ),
