--- a/packages/card/src/scss/_story-card.scss
+++ b/packages/card/src/scss/_story-card.scss
@@ -2,8 +2,10 @@
 @use "@uqds/layout/src/scss/global" as layout;
 @use "card";
 
+$story-card-small-container: 600px;
+
 .uq-story-card {
-  @extend .uq-card;
+  @extend %uq-card;
 }
 
 .uq-story-card__content {
@@ -14,11 +16,15 @@
 }
 
 .uq-story-card__title {
-  @extend .uq-card__title;
+  @extend %uq-card__title;
+
+  @media #{core.$screen-md-down} {
+    font-size: 20px;
+  }
 }
 
 .uq-story-card__description {
-  @extend .uq-card__description;
+  @extend %uq-card__description;
 }
 
 .uq-story-card__top-label {
@@ -33,8 +39,92 @@
 }
 
 .uq-story-card__image {
-  @extend .uq-card__image;
+  @extend %uq-card__image;
 }
+
+/**
+ * Mobile landscape/listing display.
+ */
+
+.uq-story-card:not(.uq-story-card--feature) {
+  @media #{core.$screen-md-down} {
+    border-radius: 0;
+    border-inline-width: 0;
+    border-top-width: 0;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: start;
+    gap: core.$space-m;
+    padding-bottom: core.$space-m;
+    background-color: transparent;
+
+    &:has(a:hover) {
+      background-color: transparent;
+    }
+
+    & .uq-story-card__content {
+      padding: 0;
+    }
+
+    & .uq-story-card__image {
+      width: 120px;
+      height: 100px;
+      aspect-ratio: unset;
+      flex-shrink: 0;
+    }
+
+    & .uq-story-card__title {
+      -webkit-line-clamp: 3;
+    }
+
+    & .uq-story-card__description {
+      display: none;
+    }
+
+    & .uq-story-card__top-label {
+      margin-bottom: 0;
+    }
+
+    & .uq-story-card__bottom-label {
+      padding-top: core.$space-s;
+    }
+  }
+}
+
+/**
+ * Side by side for card-grid 1x layouts.
+ */
+
+.uq-card-grid--target-1x {
+  & .uq-story-card {
+    & .uq-story-card__description {
+      display: block;
+    }
+  }
+
+  @container (width > #{layout.$card-grid-container-md}) {
+    & .uq-story-card:not(.uq-story-card--feature) {
+      display: flex;
+      flex-direction: row-reverse;
+      gap: var(--layout-gap);
+      align-items: center;
+
+      & .uq-story-card__image {
+        width: 50%;
+        height: 100%;
+      }
+
+      & .uq-story-card__content {
+        width: 50%;
+        padding-inline: core.$space-l 0;
+      }
+    }
+  }
+}
+
+/**
+ * Variants
+ */
 
 .uq-story-card--event {
   & .uq-story-card__top-label {
@@ -49,76 +139,72 @@
   }
 }
 
-.uq-card-grid:not(.uq-card-grid--target-1x) {
+.uq-story-card--feature {
+  .uq-story-card__title {
+    font-size: 32px;
+
+    @media #{core.$screen-md-down} {
+      font-size: 22px;
+    }
+  }
+
+  & .uq-story-card__description {
+    display: block;
+  }
+
   @media #{core.$screen-md-down} {
-    & .uq-story-card {
-      border-radius: 0;
-      border-inline-width: 0;
-      border-top-width: 0;
-      display: flex;
-      flex-direction: row-reverse;
-      align-items: center;
-      gap: core.$space-m;
-      padding-bottom: core.$space-m;
-      background-color: transparent;
-
-      &:hover {
-        background-color: transparent;
-      }
-    }
-
-    .uq-story-card__content {
-      padding: 0;
-    }
-
-    & .uq-story-card__image {
-      width: 120px;
-      height: 100px;
-      aspect-ratio: unset;
-      flex-shrink: 0;
-    }
-
-    .uq-story-card__title {
-      -webkit-line-clamp: 3;
-    }
-
-    .uq-story-card__description {
-      display: none;
-    }
-
-    .uq-story-card__top-label {
-      margin-bottom: 0;
-    }
-
-    .uq-story-card__bottom-label {
-      padding-top: core.$space-s;
+    .uq-story-card__image {
+      aspect-ratio: 2 / 1;
     }
   }
 }
 
-.uq-card-grid--target-1x {
-  & .uq-story-card {
-    & .uq-story-card__description {
-      display: block;
+.uq-story-card--landscape {
+  border-radius: 0;
+  border-inline-width: 0;
+  border-top-width: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: start;
+  gap: core.$space-m;
+  padding-bottom: core.$space-m;
+  background-color: transparent;
+
+  &:has(a:hover) {
+    background-color: transparent;
+  }
+
+  & .uq-story-card__content {
+    padding: 0;
+  }
+
+  & .uq-story-card__image {
+    width: 227px;
+    height: 138px;
+    aspect-ratio: unset;
+    flex-shrink: 0;
+
+    @container (width < #{$story-card-small-container}) {
+      width: 120px;
+      height: 100px;
     }
   }
 
-  @container (width > #{layout.$card-grid-container-md}) {
-    & .uq-story-card {
-      display: flex;
-      flex-direction: row-reverse;
-      gap: var(--layout-gap);
-      align-items: center;
+  & .uq-story-card__title {
+    @container (width < #{$story-card-small-container}) {
+      font-size: 20px;
     }
+  }
 
-    & .uq-story-card__image {
-      width: 50%;
-      height: 100%;
-    }
+  & .uq-story-card__description {
+    display: none;
+  }
 
-    & .uq-story-card__content {
-      width: 50%;
-      padding-inline: core.$space-l 0;
-    }
+  & .uq-story-card__top-label {
+    margin-bottom: 0;
+  }
+
+  & .uq-story-card__bottom-label {
+    padding-top: core.$space-s;
   }
 }
