--- a/packages/card/src/scss/_story-card.scss
+++ b/packages/card/src/scss/_story-card.scss
@@ -71,6 +71,8 @@ $story-card-small-container: 600px;
       height: 100px;
       aspect-ratio: unset;
       flex-shrink: 0;
+      margin-top: 6px;
+      background: core.$grey-100;
     }
 
     & .uq-story-card__description {
@@ -179,6 +181,8 @@ $story-card-small-container: 600px;
     height: 138px;
     aspect-ratio: unset;
     flex-shrink: 0;
+    margin-top: 6px;
+    background: core.$grey-100;
 
     @container (width < #{$story-card-small-container}) {
       width: 120px;
