tweak alert icon position

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -46,7 +46,7 @@
       width: core.$space-l;
       height: core.$space-l;
       position: absolute;
-      top: core.$space-l;
+      top: 25px;
       left: -(core.$space-m);
     }
 
