--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -227,3 +227,7 @@ body {
   border: 1px solid core.$utility-500;
   height: 220px;
 }
+
+.sb-purple-background {
+  background-color: core.$purple-500 !important;
+}
