--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -4,7 +4,7 @@ blockquote {
   border-left: 4px solid core.$purple-500;
   border-radius: 4px;
   font-size: core.$font-size-xl;
-  margin: core.$space-l 0;
+  margin: core.$space-xxl 0;
   padding-left: core.$space-l;
   font-style: normal;
 
