--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -1,72 +1,29 @@
 @use "@uqds/core/src/scss/global" as core;
 
-.blockquote {
-  border: none;
-  color: core.$purple-500;
-  font-family: core.$font-body;
+blockquote {
+  border-left: 4px solid core.$purple-500;
+  border-radius: 4px;
+  font-size: core.$font-size-xl;
+  margin: core.$space-xxl 0;
+  padding-left: core.$space-l;
+  font-style: normal;
+
+  & > p {
+    margin-bottom: core.$space-m;
+  }
+}
+
+cite {
   font-size: core.$font-size-m;
-  font-weight: core.$font-weight-normal;
-  line-height: core.$line-height;
-  font-style: italic;
-  height: auto;
-  margin-left: core.$space-xl;
-  padding: core.$space-m core.$space-l;
-  position: relative;
-  width: calc(100% - #{core.$space-xl});
+  font-style: inherit;
+  font-weight: core.$font-weight-medium;
+}
 
-  &::before {
-    background-color: core.$purple-500;
-    content: "";
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: core.$space-xs;
-  }
+.blockquote--light {
+  color: core.$white;
+  border-color: core.$white;
 
-  &--light {
+  & a {
     color: core.$white;
-
-    &::before {
-      background-color: core.$white;
-    }
-
-    .blockquote__link,
-    .blockquote__link:link,
-    .blockquote__link:visited,
-    .blockquote__link:active {
-      color: core.$white;
-      text-decoration: underline;
-    }
-    .blockquote__link:hover {
-      text-decoration: none;
-    }
-  }
-
-  &__body {
-    font-family: core.$roboto;
-    font-size: core.$font-size-xl;
-    font-weight: 300;
-    line-height: 1.4;
-    margin: core.$space-none core.$space-none core.$space-l;
-    margin-left: core.$space-none;
-    padding-left: core.$space-none;
-    border-left: none;
-
-    p:first-child {
-      margin-top: 0;
-    }
-  }
-
-  &__footer {
-    font-size: core.$font-size-s;
-
-    p:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  cite {
-    display: inline-block !important;
   }
 }
