--- a/packages/pane/src/scss/_pane.scss
+++ b/packages/pane/src/scss/_pane.scss
@@ -47,6 +47,21 @@
   }
 }
 
+.uq-pane__video {
+  flex-shrink: 0;
+  aspect-ratio: 16 / 9;
+  margin-bottom: core.$space-l;
+  position: relative;
+
+  & iframe {
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    position: absolute;
+    border: 0;
+  }
+}
+
 .uq-pane__icon {
   margin-bottom: core.$space-s;
 
@@ -127,6 +142,11 @@
     & .uq-pane__image {
       width: 50%;
       height: 100%;
+      margin: 0;
+    }
+
+    .uq-pane__video {
+      width: 50%;
       margin: 0;
     }
 
