--- a/packages/pill/src/scss/_custom-properties.scss
+++ b/packages/pill/src/scss/_custom-properties.scss
@@ -5,5 +5,5 @@
   --pill-background: #{core.$white};
   --pill-colour: #{core.$purple-500};
   --pill-font-size: #{core.$font-size-m};
-  --pill-padding: #{core.$space-m};
+  --pill-padding: 12px #{core.$space-m};
 }
