chore: fix input height, add basic focus-visible styles

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -18,6 +18,11 @@ $use-encapsulation: false !default;
   padding: core.$space-none;
 }
 
+@mixin focus-styles {
+  outline: 4px solid core.$utility-500;
+  outline-offset: -1px;
+}
+
 @mixin -base-styles {
   /**
    * TODO: user should be able to configure whether or not they want this
@@ -171,6 +176,14 @@ $use-encapsulation: false !default;
       color: core.$white;
       background-color: core.$purple-500;
     }
+  }
+
+  :focus {
+    outline: none;
+  }
+
+  :focus-visible {
+    @include focus-styles;
   }
 
   // Typography utilities
