fix: ITSADSSD-59530: Search bar QA (#581)
* chore: change wide to expand

* chore: fix input height, add basic focus-visible styles

* fix: add focus styles and fixed input height

* chore: fix focus mixin

* chore: fix search input clear button

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -173,6 +173,14 @@ $use-encapsulation: false !default;
     }
   }
 
+  :focus {
+    outline: none;
+  }
+
+  :focus-visible {
+    @include focus-styles;
+  }
+
   // Typography utilities
   .text {
     // Text colour
