--- a/packages/form/src/scss/_search-input.scss
+++ b/packages/form/src/scss/_search-input.scss
@@ -11,7 +11,7 @@
   }
 }
 
-.uq-search-input--wide {
+.uq-search-input--expand {
   max-width: 800px;
 }
 
@@ -39,13 +39,13 @@
 
 .uq-search-input__submit {
   position: absolute;
-  top: 7px;
+  top: 9px;
   right: 12px;
 }
 
 .uq-search-input__clear {
   position: absolute;
-  top: 7px;
+  top: 9px;
   right: 46px;
 
   & .uq-icon::before {
