chore: add new tooltip effects

--- a/packages/social/src/scss/_social-share.scss
+++ b/packages/social/src/scss/_social-share.scss
@@ -22,11 +22,13 @@
   & li {
     margin: 0;
     padding: 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
   }
 
   & button,
   & a {
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,8 +42,8 @@
 
     & .uq-icon {
       display: flex;
-      height: 100%;
-      width: 100%;
+      width: 32px;
+      height: 32px;
       justify-content: center;
       align-items: center;
 
@@ -55,7 +57,8 @@
       }
     }
 
-    &:hover {
+    &.is-active,
+    &:active {
       background: core.$grey-50;
 
       & .uq-icon::before {
@@ -63,29 +66,35 @@
       }
     }
 
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        background: core.$grey-50;
+
+        & .uq-icon::before {
+          filter: icon.$icon-primary-filter;
+        }
+      }
+    }
+
     & .uq-icon--standard--check::before {
       background-size: 24px;
     }
-
-    &::after {
-      content: attr(aria-label);
-      position: absolute;
-      top: -29px;
-      text-align: center;
-      background: core.$grey-50;
-      color: core.$grey-900;
-      font-size: core.$font-size-s;
-      text-decoration: none;
-      white-space: nowrap;
-      font-weight: normal;
-      padding: core.$space-xs;
-      height: 26px;
-      line-height: 18px;
-      display: none;
-    }
-
-    &:hover::after {
-      display: block;
-    }
   }
+
+}
+
+.uq-social-share__tooltip {
+  position: absolute;
+  top: -40px;
+  text-align: center;
+  background: core.$purple-500;
+  color: core.$white;
+  font-size: core.$font-size-s;
+  text-decoration: none;
+  white-space: nowrap;
+  font-weight: core.$font-weight-medium;
+  padding: 0 core.$space-s;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 2px;
 }
