fix: ITSADSSD-59374: Fix image css build (#591)
* fix: use node_modules path for swiper import

* chore: fix lint

--- a/packages/image/src/scss/_image-carousel.scss
+++ b/packages/image/src/scss/_image-carousel.scss
@@ -1,6 +1,6 @@
 @use "@uqds/core/src/scss/global" as core;
 @use "@uqds/icon/src/scss/global" as icon;
-@import "~swiper/css";
+@use "../../../../node_modules/swiper/swiper";
 
 .uq-image-carousel {
   container-type: inline-size;
