fix: remove 300 weight fonts, updated to 400 weight

--- a/packages/footer-legacy/src/scss/_component.scss
+++ b/packages/footer-legacy/src/scss/_component.scss
@@ -8,7 +8,7 @@
   color: $site-footer-color;
   font-family: core.$font-body;
   font-size: $site-footer-font-size;
-  font-weight: core.$font-weight-thin;
+  font-weight: 300;
   line-height: core.$line-height;
 
   *,
