--- a/packages/pagination/src/scss/_component.scss
+++ b/packages/pagination/src/scss/_component.scss
@@ -16,7 +16,7 @@
     .uq-pagination__link {
       color: core.$utility-500;
       font-size: 1rem;
-      font-weight: 300;
+      font-weight: core.$font-weight-normal;
       padding: core.$space-none core.$space-s;
       text-decoration: none;
 
