--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -44,7 +44,7 @@
     padding: core.$space-m core.$space-l;
     margin-right: core.$space-xs;
     font-size: core.$font-size-m;
-    font-weight: core.$font-weight-thin;
+    font-weight: core.$font-weight-normal;
     color: core.$grey-900;
     background-color: core.$white;
     border-radius: core.$space-xs core.$space-xs core.$space-none
