fix: copy button height issue when used in accordion

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -34,7 +34,7 @@
   & .uq-icon {
     width: 24px;
     height: 24px;
-    margin-block: -4px;
+    margin-block: -4px !important;
 
     &::before {
       width: 24px;
